--- a/notebook/lgb.ipynb
+++ b/notebook/lgb.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 17,
    "id": "a9ba79f4-83f6-4869-9234-8ba5184cbae1",
    "metadata": {
     "tags": []
@@ -10,13 +10,18 @@
    "outputs": [],
    "source": [
     "import os\n",
+    "import pickle\n",
     "import random\n",
     "import sys\n",
     "import uuid\n",
     "from pathlib import Path\n",
     "\n",
+    "import lightgbm as lgb\n",
     "import numpy as np\n",
     "import pandas as pd\n",
+    "from sklearn.metrics import mean_squared_error\n",
+    "from sklearn.model_selection import StratifiedKFold\n",
+    "from sklearn.preprocessing import LabelEncoder\n",
     "\n",
     "# 最大表示列数の指定（ここでは50列を指定）\n",
     "pd.set_option(\"display.max_columns\", 50)"
@@ -24,45 +29,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "1e76a525-0f1a-4621-9901-ad754533034d",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Int64Index([   547,    548,    549,    550,    551,    552,    553,    554,\n",
-      "               555,    556,\n",
-      "            ...\n",
-      "            117666, 117667, 117668, 117669, 117670, 117671, 117672, 117673,\n",
-      "            117674, 117675],\n",
-      "           dtype='int64', length=26754)\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "Int64Index([   547,    548,    549,    550,    551,    552,    553,    554,\n",
-       "               555,    556,\n",
-       "            ...\n",
-       "            117666, 117667, 117668, 117669, 117670, 117671, 117672, 117673,\n",
-       "            117674, 117675],\n",
-       "           dtype='int64', length=26759)"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "id": "c508f97b-d8d3-435e-8169-855666f63035",
    "metadata": {
     "tags": []
@@ -77,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 19,
    "id": "073fd58c-55f6-4821-a328-61441dd8dd32",
    "metadata": {
     "tags": []
@@ -91,30 +68,8 @@
     "anime_df = pd.read_csv(Path(config.input_path) / \"anime.csv\")\n",
     "\n",
     "# 整形\n",
-    "anime_df[\"genres\"] = anime_df[\"genres\"].str.replace(\" \", \"\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 67,
-   "id": "83f2941f-87e9-4976-a507-ac3cf798aa1a",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "use_cols = []"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 68,
-   "id": "26a3bde9-dec0-483e-bfb4-4b4ab3b2862d",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
+    "anime_df[\"genres\"] = anime_df[\"genres\"].str.replace(\" \", \"\")\n",
+    "\n",
     "# Merge the train data with the anime meta data\n",
     "all_df = pd.concat([train_df, test_df])\n",
     "all_df = all_df.merge(anime_df, on=\"anime_id\", how=\"left\")"
@@ -122,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 20,
    "id": "7b9f4ba8-3bb1-48d7-bc16-5b12305bd521",
    "metadata": {
     "tags": []
@@ -141,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 21,
    "id": "a9749cb4-0f37-495d-a526-1b9cb250b892",
    "metadata": {
     "tags": []
@@ -167,46 +122,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 22,
    "id": "ebf329a2-0a14-42d8-99ce-9b8e82816a42",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array(['Comedy', 'Sci-Fi', 'Seinen', 'SliceofLife', 'Space', 'Adventure',\n",
-       "       'Mystery', 'Historical', 'Supernatural', 'Fantasy', 'Ecchi',\n",
-       "       'School', 'Harem', 'Romance', 'Shounen', 'Action', 'Magic',\n",
-       "       'Sports', 'SuperPower', 'Drama', 'Thriller', 'Music', 'Shoujo',\n",
-       "       'Demons', 'Mecha', 'Game', 'Josei', 'Cars', 'Psychological',\n",
-       "       'Parody', 'Samurai', 'Military', 'ShoujoAi', 'Kids', 'MartialArts',\n",
-       "       'Horror', 'Dementia', 'Vampire', 'ShounenAi', 'Hentai', 'Yaoi',\n",
-       "       'Police'], dtype=object)"
-      ]
-     },
-     "execution_count": 71,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# ジャンルを作る\n",
-    "stacked_genres = anime_df[\"genres\"].str.split(\",\").apply(pd.Series).stack().reset_index(drop=True)\n",
-    "unique_genres = stacked_genres.unique()\n",
-    "unique_genres"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 72,
-   "id": "8ab38c43-5b5e-4432-a313-5b93a5a145cd",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
+    "# ジャンルを作る\n",
+    "stacked_genres = anime_df[\"genres\"].str.split(\",\").apply(pd.Series).stack().reset_index(drop=True)\n",
+    "unique_genres = stacked_genres.unique()\n",
+    "\n",
+    "\n",
+    "# そのジャンルの作品かどうかのフラグを立てる（multi-hot encoding)\n",
     "for genre in unique_genres:\n",
     "    all_df[genre] = 0\n",
     "\n",
@@ -219,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 23,
    "id": "4ed0f3b1-8f87-417f-a34a-57ece265032a",
    "metadata": {
     "tags": []
@@ -649,13 +577,57 @@
        "[5 rows x 64 columns]"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "all_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "8f996af4-ac7c-4ea0-ba36-9f8c484209df",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "def convert_to_minutes(s):\n",
+    "    if \"hr. \" in s and \"min.\" in s:\n",
+    "        # 'hr.'と'min.'が含まれる場合、時間と分を分に変換\n",
+    "        hrs, mins = s.split(\" hr. \")\n",
+    "        return int(hrs) * 60 + int(mins.split(\" min.\")[0])\n",
+    "    elif \"hr.\" in s:\n",
+    "        # 'hr.'のみが含まれる場合、時間を分に変換\n",
+    "        return int(s.split(\" hr.\")[0]) * 60\n",
+    "    elif \"min. per ep.\" in s:\n",
+    "        # 'min. per ep.'が含まれる場合、エピソードあたりの時間を取得\n",
+    "        return int(s.split(\" min. per ep.\")[0])\n",
+    "    elif \"min.\" in s:\n",
+    "        # 'min.'が含まれる場合、そのまま分を取得\n",
+    "        return int(s.split(\" min.\")[0])\n",
+    "    else:\n",
+    "        # 上記のいずれにも該当しない場合、NaNにする\n",
+    "        return np.nan\n",
+    "\n",
+    "\n",
+    "# 'duration'列に適用\n",
+    "all_df[\"duration_in_minutes\"] = all_df[\"duration\"].apply(convert_to_minutes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "24ffcc4e-04d6-4174-be05-d30af8ccdbda",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 作品の統計的な評価を得る\n",
+    "\n",
+    "user_num_cols = [\"watching\", \"completed\", \"on_hold\", \"dropped\", \"plan_to_watch\"]\n"
    ]
   },
   {
@@ -1263,15 +1235,6 @@
     }
    ],
    "source": [
-    "import pickle\n",
-    "\n",
-    "import lightgbm as lgb\n",
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "from sklearn.metrics import mean_squared_error\n",
-    "from sklearn.model_selection import StratifiedKFold\n",
-    "from sklearn.preprocessing import LabelEncoder\n",
-    "\n",
     "# Initialize the StratifiedKFold object\n",
     "skf = StratifiedKFold(n_splits=5)\n",
     "\n",
@@ -1388,7 +1351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 5,
    "id": "80cdc186-38bb-4c0d-a1c9-093422c5784e",
    "metadata": {
     "tags": []
@@ -1405,7 +1368,7 @@
        "           dtype='int64', length=26754)"
       ]
      },
-     "execution_count": 108,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1417,7 +1380,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": null,
+   "id": "251de25c-975a-4dc5-9f90-1af2192b5fe5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "seen_sub_df = pd.read_csv(\"submission.csv\")\n",
+    "seen_oof_df = pd.read_csv(\"submission.csv\")\n",
+    "unseend_sub_df = pd.read_csv(\"submission.csv\")\n",
+    "unseen_oof_df = pd.read_csv(\"submission.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "febad746-d43c-4704-8700-01e693950080",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "id": "fe1acd4b-fdcc-4d48-8c62-79d07fa5266b",
    "metadata": {
     "tags": []
@@ -1425,7 +1409,7 @@
    "outputs": [],
    "source": [
     "lgb_sub_df = pd.read_csv(\"submission.csv\")\n",
-    "sub_df = pd.read_csv(\"../output/sub_000_baseline_07cbe2aa.csv\")\n",
+    "sub_df = pd.read_csv(\"../output/000_baseline/374e3f70/sub.csv\")\n",
     "\n",
     "sub_df.iloc[no_train_user_index] = lgb_sub_df.iloc[no_train_user_index]"
    ]
@@ -1439,7 +1423,7 @@
    },
    "outputs": [],
    "source": [
-    "sub_df.to_csv(\"sub_000_baseline_07cbe2aa_padded.csv\", index=False)"
+    "sub_df.to_csv(\"374e3f70.csv\", index=False)"
    ]
   },
   {
@@ -1452,7 +1436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 8,
    "id": "463c02d7-749e-41b1-b954-56ff1c3450cb",
    "metadata": {
     "tags": []
@@ -1466,7 +1450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 9,
    "id": "fae38026-8a6f-4edd-bc8f-fecbc4b79f37",
    "metadata": {
     "tags": []
@@ -1478,7 +1462,7 @@
        "1.2137390600356632"
       ]
      },
-     "execution_count": 115,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1486,6 +1470,37 @@
    "source": [
     "1.3861729696029266 * no_train_len / total_len + 1.163 * train_len / total_len"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "559c158e-7e57-445a-8e1d-c8157bc89a30",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.22735307114449846"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "no_train_len / total_len"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "84b7c906-91bd-4889-902b-84bfc5dfe0f1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
