--- a/notebook/lgb.ipynb
+++ b/notebook/lgb.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 45,
    "id": "a9ba79f4-83f6-4869-9234-8ba5184cbae1",
    "metadata": {
     "tags": []
@@ -29,17 +29,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "id": "1e76a525-0f1a-4621-9901-ad754533034d",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['user_id', 'anime_id', 'score', 'genres', 'japanese_name', 'type',\n",
+       "       'episodes', 'aired', 'producers', 'licensors', 'studios', 'source',\n",
+       "       'duration', 'rating', 'members', 'watching', 'completed', 'on_hold',\n",
+       "       'dropped', 'plan_to_watch'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 46,
    "id": "c508f97b-d8d3-435e-8169-855666f63035",
    "metadata": {
     "tags": []
@@ -54,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 47,
    "id": "073fd58c-55f6-4821-a328-61441dd8dd32",
    "metadata": {
     "tags": []
@@ -106,14 +121,6 @@
     "# 'aired' 列を放送開始日と放送終了日に分割\n",
     "date_df = pd.DataFrame()\n",
     "date_df[[\"start_date\", \"end_date\"]] = all_df[\"aired\"].str.split(\" to \", expand=True)\n",
-    "\n",
-    "\n",
-    "# 年だけを取得するための関数定義\n",
-    "def get_year(date_str):\n",
-    "    try:\n",
-    "        return pd.to_datetime(date_str).year\n",
-    "    except ValueError:\n",
-    "        return None\n",
     "\n",
     "\n",
     "# 開始日と終了日を年に変換\n",
