--- a/notebook/baseline.ipynb
+++ b/notebook/baseline.ipynb
@@ -606,7 +606,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": null,
+   "id": "8d82af71-6f2a-471f-afa5-25b2e704364d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "col = \"producers\"\n",
+    "all_df[col].srt.split(\",\")."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
    "id": "0e311494-6df1-4e27-80f3-e32f748d4d54",
    "metadata": {
     "tags": []
@@ -616,45 +627,69 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 2.34 s, sys: 0 ns, total: 2.34 s\n",
-      "Wall time: 2.34 s\n"
+      "0008e10fb39e55447333    ジョジョの奇妙な冒険 黄金の風  DEVILMAN crybaby     ぼくのぴこ  モブサイコ100  \\\n",
+      "0008e10fb39e55447333                                                            \n",
+      "ジョジョの奇妙な冒険 黄金の風                1.000000          0.086957  0.285714       0.0   \n",
+      "DEVILMAN crybaby               0.086957          1.000000  0.000000       0.0   \n",
+      "ぼくのぴこ                          0.285714          0.000000  1.000000       0.0   \n",
+      "モブサイコ100                       0.000000          0.000000  0.000000       1.0   \n",
+      "はじめの一歩 -Champion Road-         0.181818          0.181818  0.222222       0.0   \n",
+      "\n",
+      "0008e10fb39e55447333    はじめの一歩 -Champion Road-  \n",
+      "0008e10fb39e55447333                            \n",
+      "ジョジョの奇妙な冒険 黄金の風                       0.181818  \n",
+      "DEVILMAN crybaby                      0.181818  \n",
+      "ぼくのぴこ                                 0.222222  \n",
+      "モブサイコ100                              0.000000  \n",
+      "はじめの一歩 -Champion Road-                1.000000  \n",
+      "CPU times: user 6.77 ms, sys: 0 ns, total: 6.77 ms\n",
+      "Wall time: 5.47 ms\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
     "from rapidfuzz.distance import DamerauLevenshtein, Postfix, Prefix\n",
+    "from rapidfuzz.fuzz import partial_ratio\n",
     "from rapidfuzz.process import cdist\n",
     "\n",
     "\n",
-    "# calculate cdist for each group and store in a dictionary\n",
-    "def calculate_csim_sum(df, agg_way=\"sum\", scorer=\"prefix\"):\n",
+    "def calculate_csim(df, aggway=\"sum\", scorer=\"prefix\"):\n",
     "    queries = df\n",
-    "    scorer = None\n",
-    "    if scorer == \"prefix\":\n",
-    "        scorer = Prefix.normalized_distance\n",
-    "    elif scorer == \"prefix\":\n",
-    "        scorer = Postfix.normalized_distance\n",
+    "    if scorer == \"partial\":\n",
+    "        score = cdist(queries, queries, scorer=partial_ratio)\n",
+    "        result_df = pd.DataFrame(score, index=queries, columns=queries) / 100\n",
+    "        result = result_df.to_numpy()\n",
+    "        np.fill_diagonal(result, 0.0)  # 自身は0にする\n",
     "    else:\n",
-    "        scorer = DamerauLevenshtein.normalized_distance\n",
-    "    score = cdist(queries, queries, scorer=Prefix.normalized_distance)\n",
-    "    result_df = pd.DataFrame(score, index=queries, columns=queries)\n",
-    "    result_df = 1 - result_df  # distanceなので反転\n",
-    "    if agg_way == \"sum\":\n",
-    "        result = result_df.sum(axis=1)\n",
-    "    elif agg_way == \"mean\":\n",
-    "        result = result_df.mean(axis=1)\n",
-    "    elif agg_way == \"var\":\n",
-    "        result = result_df.var(axis=1)\n",
-    "    return result.to_numpy()\n",
+    "        if scorer == \"prefix\":\n",
+    "            scorer = Prefix.normalized_distance\n",
+    "        elif scorer == \"prefix\":\n",
+    "            scorer = Postfix.normalized_distance\n",
+    "        else:\n",
+    "            scorer = DamerauLevenshtein.normalized_distance\n",
+    "        score = cdist(queries, queries, scorer=Prefix.normalized_distance)\n",
+    "        result_df = pd.DataFrame(score, index=queries, columns=queries)\n",
+    "        result_df = 1 - result_df  # distanceなので反転\n",
+    "        result = result_df.to_numpy()\n",
+    "        np.fill_diagonal(result, 0.0)  # 自身は0にする\n",
+    "    if aggway == \"sum\":\n",
+    "        result = np.sum(result, axis=1)\n",
+    "    elif aggway == \"mean\":\n",
+    "        result = np.mean(result, axis=1)\n",
+    "    elif aggway == \"var\":\n",
+    "        result = np.var(result, axis=1)\n",
+    "    elif aggway == \"max\":\n",
+    "        result = np.max(result, axis=1)\n",
+    "    return result\n",
     "\n",
     "\n",
-    "cdist_dict = all_df.groupby(\"user_id\")[\"japanese_name\"].transform(calculate_csim_sum, \"mean\", \"prefix\")"
+    "cdist_dict = all_df.groupby(\"user_id\")[\"japanese_name\"].transform(calculate_csim, \"sum\", \"partial\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 67,
    "id": "d8b4967c-d835-44c3-9916-5cfec72b5a86",
    "metadata": {
     "tags": []
@@ -663,21 +698,15 @@
     {
      "data": {
       "text/plain": [
-       "0         0.045343\n",
-       "1         0.014706\n",
-       "2         0.014706\n",
-       "3         0.025401\n",
-       "4         0.033422\n",
-       "            ...   \n",
-       "254072    0.019139\n",
-       "254073    0.017544\n",
-       "254074    0.017544\n",
-       "254075    0.017544\n",
-       "254076    0.017544\n",
-       "Name: japanese_name, Length: 254077, dtype: float32"
+       "0    0.554489\n",
+       "1    0.268775\n",
+       "2    0.507936\n",
+       "3    0.000000\n",
+       "4    0.585859\n",
+       "Name: japanese_name, dtype: float32"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
