--- a/notebook/baseline.ipynb
+++ b/notebook/baseline.ipynb
@@ -350,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "id": "3a6ad9fe-99aa-4493-9107-b0dfa86ecde1",
    "metadata": {
     "tags": []
@@ -358,225 +358,28 @@
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>user_id</th>\n",
-       "      <th>anime_id</th>\n",
-       "      <th>score</th>\n",
-       "      <th>genres</th>\n",
-       "      <th>japanese_name</th>\n",
-       "      <th>type</th>\n",
-       "      <th>episodes</th>\n",
-       "      <th>aired</th>\n",
-       "      <th>producers</th>\n",
-       "      <th>licensors</th>\n",
-       "      <th>studios</th>\n",
-       "      <th>source</th>\n",
-       "      <th>duration</th>\n",
-       "      <th>rating</th>\n",
-       "      <th>members</th>\n",
-       "      <th>watching</th>\n",
-       "      <th>completed</th>\n",
-       "      <th>on_hold</th>\n",
-       "      <th>dropped</th>\n",
-       "      <th>plan_to_watch</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0008e10fb39e55447333</td>\n",
-       "      <td>0669cc0219d468761195</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>Action,Adventure,Shounen</td>\n",
-       "      <td>ジョジョの奇妙な冒険 黄金の風</td>\n",
-       "      <td>TV</td>\n",
-       "      <td>39</td>\n",
-       "      <td>Oct 6, 2018 to Jul 28, 2019</td>\n",
-       "      <td>KlockWorx, Medicos Entertainment, Shueisha, Wa...</td>\n",
-       "      <td>VIZ Media</td>\n",
-       "      <td>David Production</td>\n",
-       "      <td>Manga</td>\n",
-       "      <td>23 min. per ep.</td>\n",
-       "      <td>R - 17+ (violence &amp; profanity)</td>\n",
-       "      <td>542642</td>\n",
-       "      <td>64809</td>\n",
-       "      <td>383733</td>\n",
-       "      <td>10625</td>\n",
-       "      <td>5735</td>\n",
-       "      <td>77740</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>0008e10fb39e55447333</td>\n",
-       "      <td>111adb8835b8a1a2cf54</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>Action,Dementia,Demons,Horror,Supernatural</td>\n",
-       "      <td>DEVILMAN crybaby</td>\n",
-       "      <td>ONA</td>\n",
-       "      <td>10</td>\n",
-       "      <td>Jan 5, 2018</td>\n",
-       "      <td>Aniplex, Dynamic Planning, Netflix</td>\n",
-       "      <td>Unknown</td>\n",
-       "      <td>Science SARU</td>\n",
-       "      <td>Manga</td>\n",
-       "      <td>25 min. per ep.</td>\n",
-       "      <td>R+ - Mild Nudity</td>\n",
-       "      <td>650309</td>\n",
-       "      <td>29665</td>\n",
-       "      <td>477257</td>\n",
-       "      <td>13336</td>\n",
-       "      <td>18054</td>\n",
-       "      <td>111997</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>0008e10fb39e55447333</td>\n",
-       "      <td>1fc8683c393432a2f9c7</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>Hentai,Yaoi</td>\n",
-       "      <td>ぼくのぴこ</td>\n",
-       "      <td>OVA</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Sep 7, 2006</td>\n",
-       "      <td>Natural High</td>\n",
-       "      <td>Unknown</td>\n",
-       "      <td>Blue Cat, Sugar Boy</td>\n",
-       "      <td>Original</td>\n",
-       "      <td>34 min.</td>\n",
-       "      <td>Rx - Hentai</td>\n",
-       "      <td>137560</td>\n",
-       "      <td>5153</td>\n",
-       "      <td>113190</td>\n",
-       "      <td>758</td>\n",
-       "      <td>9431</td>\n",
-       "      <td>9028</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>0008e10fb39e55447333</td>\n",
-       "      <td>2290175205d55e81b197</td>\n",
-       "      <td>8.0</td>\n",
-       "      <td>Action,SliceofLife,Comedy,Supernatural</td>\n",
-       "      <td>モブサイコ100</td>\n",
-       "      <td>TV</td>\n",
-       "      <td>12</td>\n",
-       "      <td>Jul 11, 2016 to Sep 27, 2016</td>\n",
-       "      <td>BS Fuji, Hakuhodo DY Music &amp; Pictures, KlockWo...</td>\n",
-       "      <td>Crunchyroll, Funimation</td>\n",
-       "      <td>Bones</td>\n",
-       "      <td>Web manga</td>\n",
-       "      <td>24 min. per ep.</td>\n",
-       "      <td>PG-13 - Teens 13 or older</td>\n",
-       "      <td>1255830</td>\n",
-       "      <td>68041</td>\n",
-       "      <td>942402</td>\n",
-       "      <td>26125</td>\n",
-       "      <td>19213</td>\n",
-       "      <td>200049</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>0008e10fb39e55447333</td>\n",
-       "      <td>28f173b60331d5cabb0d</td>\n",
-       "      <td>9.0</td>\n",
-       "      <td>Comedy,Shounen,Sports</td>\n",
-       "      <td>はじめの一歩 -Champion Road-</td>\n",
-       "      <td>Special</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Apr 18, 2003</td>\n",
-       "      <td>Unknown</td>\n",
-       "      <td>Discotek Media, Geneon Entertainment USA</td>\n",
-       "      <td>Madhouse</td>\n",
-       "      <td>Manga</td>\n",
-       "      <td>1 hr. 30 min.</td>\n",
-       "      <td>PG-13 - Teens 13 or older</td>\n",
-       "      <td>97346</td>\n",
-       "      <td>1565</td>\n",
-       "      <td>82189</td>\n",
-       "      <td>502</td>\n",
-       "      <td>379</td>\n",
-       "      <td>12711</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "                user_id              anime_id  score  \\\n",
-       "0  0008e10fb39e55447333  0669cc0219d468761195    2.0   \n",
-       "1  0008e10fb39e55447333  111adb8835b8a1a2cf54   10.0   \n",
-       "2  0008e10fb39e55447333  1fc8683c393432a2f9c7    1.0   \n",
-       "3  0008e10fb39e55447333  2290175205d55e81b197    8.0   \n",
-       "4  0008e10fb39e55447333  28f173b60331d5cabb0d    9.0   \n",
-       "\n",
-       "                                       genres           japanese_name  \\\n",
-       "0                    Action,Adventure,Shounen         ジョジョの奇妙な冒険 黄金の風   \n",
-       "1  Action,Dementia,Demons,Horror,Supernatural        DEVILMAN crybaby   \n",
-       "2                                 Hentai,Yaoi                   ぼくのぴこ   \n",
-       "3      Action,SliceofLife,Comedy,Supernatural                モブサイコ100   \n",
-       "4                       Comedy,Shounen,Sports  はじめの一歩 -Champion Road-   \n",
-       "\n",
-       "      type episodes                         aired  \\\n",
-       "0       TV       39   Oct 6, 2018 to Jul 28, 2019   \n",
-       "1      ONA       10                   Jan 5, 2018   \n",
-       "2      OVA        1                   Sep 7, 2006   \n",
-       "3       TV       12  Jul 11, 2016 to Sep 27, 2016   \n",
-       "4  Special        1                  Apr 18, 2003   \n",
-       "\n",
-       "                                           producers  \\\n",
-       "0  KlockWorx, Medicos Entertainment, Shueisha, Wa...   \n",
-       "1                 Aniplex, Dynamic Planning, Netflix   \n",
-       "2                                       Natural High   \n",
-       "3  BS Fuji, Hakuhodo DY Music & Pictures, KlockWo...   \n",
-       "4                                            Unknown   \n",
-       "\n",
-       "                                  licensors              studios     source  \\\n",
-       "0                                 VIZ Media     David Production      Manga   \n",
-       "1                                   Unknown         Science SARU      Manga   \n",
-       "2                                   Unknown  Blue Cat, Sugar Boy   Original   \n",
-       "3                   Crunchyroll, Funimation                Bones  Web manga   \n",
-       "4  Discotek Media, Geneon Entertainment USA             Madhouse      Manga   \n",
-       "\n",
-       "          duration                          rating  members  watching  \\\n",
-       "0  23 min. per ep.  R - 17+ (violence & profanity)   542642     64809   \n",
-       "1  25 min. per ep.                R+ - Mild Nudity   650309     29665   \n",
-       "2          34 min.                     Rx - Hentai   137560      5153   \n",
-       "3  24 min. per ep.       PG-13 - Teens 13 or older  1255830     68041   \n",
-       "4    1 hr. 30 min.       PG-13 - Teens 13 or older    97346      1565   \n",
-       "\n",
-       "   completed  on_hold  dropped  plan_to_watch  \n",
-       "0     383733    10625     5735          77740  \n",
-       "1     477257    13336    18054         111997  \n",
-       "2     113190      758     9431           9028  \n",
-       "3     942402    26125    19213         200049  \n",
-       "4      82189      502      379          12711  "
+       "0         39\n",
+       "1         10\n",
+       "2          1\n",
+       "3         12\n",
+       "4          1\n",
+       "          ..\n",
+       "254072    26\n",
+       "254073    26\n",
+       "254074    24\n",
+       "254075    24\n",
+       "254076    26\n",
+       "Name: episodes, Length: 254077, dtype: object"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "all_df.head()"
+    "all_df[\"episodes\"]"
    ]
   },
   {
