--- a/notebook/baseline.ipynb
+++ b/notebook/baseline.ipynb
@@ -350,37 +350,145 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
+   "id": "9c215e40-f0e1-4cff-8954-b80c561a374f",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
    "id": "3a6ad9fe-99aa-4493-9107-b0dfa86ecde1",
    "metadata": {
     "tags": []
    },
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 12.8 ms, sys: 4.05 ms, total: 16.9 ms\n",
+      "Wall time: 14.1 ms\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "import cuml\n",
+    "\n",
+    "X = all_df[[\"members\", \"watching\", \"completed\", \"on_hold\", \"dropped\", \"plan_to_watch\"]].head().astype(float)\n",
+    "X = (X - X.mean(axis=0)) / X.std(axis=0)\n",
+    "X = X.fillna(0)\n",
+    "\n",
+    "pca = cuml.PCA(n_components=2)\n",
+    "Z_pca = pca.fit_transform(X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "f37c0846-93bf-4145-9ee2-c0966465ad78",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>members</th>\n",
+       "      <th>watching</th>\n",
+       "      <th>completed</th>\n",
+       "      <th>on_hold</th>\n",
+       "      <th>dropped</th>\n",
+       "      <th>plan_to_watch</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.012571</td>\n",
+       "      <td>0.977793</td>\n",
+       "      <td>-0.046072</td>\n",
+       "      <td>0.033665</td>\n",
+       "      <td>-0.599639</td>\n",
+       "      <td>-0.057768</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.241801</td>\n",
+       "      <td>-0.132055</td>\n",
+       "      <td>0.222875</td>\n",
+       "      <td>0.290174</td>\n",
+       "      <td>0.930575</td>\n",
+       "      <td>0.375736</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>-0.849874</td>\n",
+       "      <td>-0.906145</td>\n",
+       "      <td>-0.824072</td>\n",
+       "      <td>-0.899931</td>\n",
+       "      <td>-0.140538</td>\n",
+       "      <td>-0.927279</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1.530994</td>\n",
+       "      <td>1.079860</td>\n",
+       "      <td>1.560492</td>\n",
+       "      <td>1.500244</td>\n",
+       "      <td>1.074541</td>\n",
+       "      <td>1.489984</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>-0.935492</td>\n",
+       "      <td>-1.019454</td>\n",
+       "      <td>-0.913222</td>\n",
+       "      <td>-0.924153</td>\n",
+       "      <td>-1.264939</td>\n",
+       "      <td>-0.880673</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "0         39\n",
-       "1         10\n",
-       "2          1\n",
-       "3         12\n",
-       "4          1\n",
-       "          ..\n",
-       "254072    26\n",
-       "254073    26\n",
-       "254074    24\n",
-       "254075    24\n",
-       "254076    26\n",
-       "Name: episodes, Length: 254077, dtype: object"
+       "    members  watching  completed   on_hold   dropped  plan_to_watch\n",
+       "0  0.012571  0.977793  -0.046072  0.033665 -0.599639      -0.057768\n",
+       "1  0.241801 -0.132055   0.222875  0.290174  0.930575       0.375736\n",
+       "2 -0.849874 -0.906145  -0.824072 -0.899931 -0.140538      -0.927279\n",
+       "3  1.530994  1.079860   1.560492  1.500244  1.074541       1.489984\n",
+       "4 -0.935492 -1.019454  -0.913222 -0.924153 -1.264939      -0.880673"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "all_df[\"episodes\"]"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
