--- a/notebook/multilabel.ipynb
+++ b/notebook/multilabel.ipynb
@@ -26,33 +26,15 @@
     "from sklearn.preprocessing import LabelEncoder\n",
     "\n",
     "# 最大表示列数の指定（ここでは50列を指定）\n",
-    "pd.set_option(\"display.max_columns\", 50)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "1ed2748e-213d-484d-8ef8-f4fc3eac3092",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
+    "pd.set_option(\"display.max_columns\", 50)\n",
+    "\n",
+    "\n",
     "from hydra import compose, initialize\n",
     "\n",
     "with initialize(config_path=\"../yamls\", version_base=None):\n",
-    "    config = compose(config_name=\"config.yaml\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "id": "4f5081f6-2f42-4d3d-b034-ffdc28cdf7db",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
+    "    config = compose(config_name=\"config.yaml\")\n",
+    "\n",
+    "\n",
     "train_df = pd.read_csv(Path(config.input_path) / \"train.csv\")\n",
     "test_df = pd.read_csv(Path(config.input_path) / \"test.csv\")\n",
     "\n",
@@ -66,6 +48,26 @@
     "all_df = pd.concat([train_df, test_df])\n",
     "all_df = all_df.merge(anime_df, on=\"anime_id\", how=\"left\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "1ed2748e-213d-484d-8ef8-f4fc3eac3092",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "4f5081f6-2f42-4d3d-b034-ffdc28cdf7db",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
